tests/base/invalid/List_CompileFail_4.whiley
import * from whiley.lang.*

void ::main(System.Console sys,[string] args):
     x = 1
     y = x[0]

